--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,14 @@
 
   <body>
     <header>
-      
+      <%= render 'layouts/header' %>
     </header>
     <main>
+    <%= flash[:notice] %>
     <%= yield %>
     </main>
     <footer>
-      
+      <%= render 'layouts/footer' %>
     </footer>
   </body>
 </html>
