--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,44 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container">
+  <div class="row no-gutters">
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto text-center rounded px-0 my-5">
+      <h5 class="text-dark bg-light py-4 mb-0">新規登録</h5>
+      <div class="form-body p-4">
+        <div class="mx-auto text-center">
+          <p>下記を入力してください。</p>
+        </div>
+        <%= form_with model: @customer, url: customer_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="input-group mb-3">
+            <%= f.text_field :name, autofocus: true, class:"form-control", id:"inputName", placeholder:"名前"%>
+          </div>
+          <div class="input-group mb-3">
+            <%= f.email_field :email, autofocus: true, class:"form-control", id:"inputEmail", placeholder:"メールアドレス" %>
+          </div>
+          <div class="input-group mb-3">
+            <%= f.text_field :postcode, autofocus: true, class:"form-control", id:"inputName", placeholder:"郵便番号"%>
+          </div>
+          <div class="input-group mb-3">
+            <%= f.text_field :address, autofocus: true, class:"form-control", id:"inputName", placeholder:"住所"%>
+          </div>
+          <div class="input-group mb-3">
+            <%= f.text_field :phone_number, autofocus: true, class:"form-control", id:"inputName", placeholder:"電話番号"%>
+          </div>
+          <div class="input-group mb-3">
+            <%= f.password_field :password, autocomplete: "off", class:"form-control", id:"inputPassword", placeholder:"パスワード" %>
+          </div>
+          <div class="input-group mb-3">
+            <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control", id:"inputConfirmPassword", placeholder:"パスワード確認" %>
+          </div>
+          <%= f.submit "サインアップ", class:"btn btn-block btn-secondary mt-5" %>
+        <% end %>
+        <div class="pt-5">
+        登録済みの方は<%= render "public/shared/links" %>からログインしてください。<br>
+        ゲストログインの方はこちらを押してください。
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
