--- a/app/views/public/customers_pets/new.html.erb
+++ b/app/views/public/customers_pets/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Public::CustomersPets#new</h1>
-<p>Find me in app/views/public/customers_pets/new.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 sm-5">
+      <h4 class="my-3 ml-4">ペット情報新規登録</h4>
+
+      <%= render 'form', customer: @customer, customers_pet: @customers_pet %>
+    </div>
+  </div>
+</div>
