--- a/app/views/public/customers/_form.html.erb
+++ b/app/views/public/customers/_form.html.erb
@@ -3,31 +3,31 @@
     <tr>
       <td>ユーザー名</td>
       <td>
-        <%= f.text_field :name, autofocus: true %>
+        <%= f.text_field :name, autofocus: true, class: "form-control" %>
       </td>
     </tr>
     <tr>
       <td>メールアドレス</td>
       <td>
-        <%= f.text_field :email %>
+        <%= f.text_field :email, class: "form-control" %>
       </td>
     </tr>
     <tr>
       <td>郵便番号</td>
       <td>
-        <%= f.text_field :postcode %>
+        <%= f.text_field :postcode, class: "form-control" %>
       </td>
     </tr>
     <tr>
       <td>住所</td>
       <td>
-        <%= f.text_field :address %>
+        <%= f.text_field :address, class: "form-control" %>
       </td>
     </tr>
     <tr>
       <td>電話番号(ハイフンなし)</td>
       <td>
-        <%= f.text_field :phone_number %>
+        <%= f.text_field :phone_number, class: "form-control" %>
       </td>
     </tr>
     <tr>
