--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,2 +1,16 @@
-<h1>Admin::Customers#show</h1>
-<p>Find me in app/views/admin/customers/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 sm-10">
+      <h4><%= @customer.name %>さんの詳細ページ</h4>
+      <div class="py-3">
+        <%= link_to "参加しているグループ一覧", admin_groups_path, class:"btn btn-outline-secondary mb-2" %><br>
+        <%= link_to "いいねした投稿", admin_pet_posts_path, class:"btn btn-outline-secondary pt-2" %>
+        <%= link_to "#{@customer.name}さんの投稿ページ", admin_pet_posts_path, class:"btn btn-outline-secondary pt-2" %>
+      </div>
+      <%=render 'info', customer:  @customer %>
+    </div>
+    <div class="col-md-5 offset-md-1 sm-10">
+      <%=render 'public/customers_pets/info', customer:  @customer %>
+    </div>
+  </div>
+</div>
