--- a/app/views/public/customer_pets/_form.html.erb
+++ b/app/views/public/customer_pets/_form.html.erb
@@ -10,34 +10,34 @@
     <div class="form-group">
       <%= f.label :species, "ペットの種類" %>
       <div class="form-check">
-        <%= f.radio_button :species, '犬', class: "form-check-input" %>
+        <%= f.radio_button :species, 'dog', class: "form-check-input" %>
         <%= f.label :犬, class: "form-check-label" %>
       </div>
       <div class="form-check">
-        <%= f.radio_button :species, '猫', class: "form-check-input" %>
+        <%= f.radio_button :species, 'cat', class: "form-check-input" %>
         <%= f.label :猫, class: "form-check-label" %>
       </div>
       <div class="form-check">
-        <%= f.radio_button :species, '鳥', class: "form-check-input" %>
+        <%= f.radio_button :species, 'bird', class: "form-check-input" %>
         <%= f.label :鳥, class: "form-check-label" %>
       </div>
       <div class="form-check">
-        <%= f.radio_button :species, 'その他', class: "form-check-input" %>
+        <%= f.radio_button :species, 'other', class: "form-check-input" %>
         <%= f.label :その他, class: "form-check-label" %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :gender, "ペットの性別" %>
       <div class="form-check">
-        <%= f.radio_button :gender, 'オス', class: "form-check-input" %>
+        <%= f.radio_button :gender, 'male', class: "form-check-input" %>
         <%= f.label :オス, class: "form-check-label" %>
       </div>
       <div class="form-check">
-        <%= f.radio_button :gender, 'メス', class: "form-check-input" %>
+        <%= f.radio_button :gender, 'female', class: "form-check-input" %>
         <%= f.label :メス, class: "form-check-label" %>
       </div>
       <div class="form-check">
-        <%= f.radio_button :gender, '不明', class: "form-check-input" %>
+        <%= f.radio_button :gender, 'unknown', class: "form-check-input" %>
         <%= f.label :不明, class: "form-check-label" %>
       </div>
     </div>
