--- a/app/views/public/pet_posts/show.html.erb
+++ b/app/views/public/pet_posts/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Public::PetPosts#show</h1>
-<p>Find me in app/views/public/pet_posts/show.html.erb</p>
+<div class="container">
+  <div class="row">
+      <%= render 'detail', customer: @customer, pet_post: @pet_post %>
+  </div>
+</div>
