--- a/app/views/public/pet_posts/index.html.erb
+++ b/app/views/public/pet_posts/index.html.erb
@@ -1,2 +1,36 @@
-<h1>Public::PetPosts#index</h1>
-<p>Find me in app/views/public/pet_posts/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="d-flex align-items-center">
+        <h4 class="my-2">保護情報一覧</h4>
+        <div class="ml-3">
+        <%= link_to "迷子・保護情報を登録", new_pet_post_path, class:"btn btn-outline-danger mb-2" %>
+        </div>
+      </div>
+      <% @pet_posts.each do |pet_post| %>
+        <% if pet_post.found? %>
+          <div class="card-deck mb-3">
+            <div class="card width: 18rem;">
+                <%= link_to pet_post_path(pet_post.id) do %>
+                  <%= image_tag pet_post.get_image(500, 500), size: "200x200", class: "rounded" %>
+                <% end %>
+              <div class="card-body">
+                <div class="card-title">
+                <h6>投稿者 :<%= link_to pet_post.customer.name, customer_path(pet_post.customer) %></h6>
+              </div>
+              <div class="card-text">
+                <p>場所 :<%= pet_post.prefecture %><%= pet_post.area %>付近</p>
+                <%= link_to pet_post_path(pet_post.id), class: "btn btn-primary" do %>
+                  詳細を見る
+                <% end %>
+              </div>
+              <div class="card-footer bg-transparent border-0">
+                <h6>発生日 :<%= pet_post.occurred_on %></h6>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+</div>
