--- a/app/views/public/pet_posts/show.html.erb
+++ b/app/views/public/pet_posts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
   <div class="row">
-      <%= render 'detail', customer: @customer, pet_post: @pet_post %>
+      <%= render 'detail', customer: @customer, pet_post: @pet_post, pet_post_tags: @pet_post_tags %>
   </div>
 </div>
