--- a/app/views/public/pet_posts/_form.html.erb
+++ b/app/views/public/pet_posts/_form.html.erb
@@ -59,7 +59,7 @@
   </div>
   <div class="form-group">
     <%= f.label :tag_name, "タグ(半角スペースで複数個登録できます)" %>
-    <%= f.text_field :tag_name %>
+    <%= f.text_field :tag_name, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.submit "新規登録", class: "btn btn-outline-secondary" %>
