--- a/app/views/public/pet_posts/index.html.erb
+++ b/app/views/public/pet_posts/index.html.erb
@@ -4,7 +4,9 @@
       <div class="d-flex align-items-center">
         <h4 class="my-2">保護情報一覧</h4>
         <div class="ml-3">
-        <%= link_to "迷子・保護情報を登録", new_pet_post_path, class:"btn btn-outline-danger mb-2" %>
+          <% if customer_signed_in? %>
+            <%= link_to "迷子・保護情報を登録", new_pet_post_path, class:"btn btn-outline-danger mb-2" %>
+          <% end %>
         </div>
       </div>
       <% @pet_posts.each do |pet_post| %>
