--- a/app/views/public/pet_posts/_list.html.erb
+++ b/app/views/public/pet_posts/_list.html.erb
@@ -1,25 +1,25 @@
 <div class="card-deck mb-3">
-  <div class="card width: 18rem;">
-      <%= link_to pet_post_path(pet_post.id) do %>
-        <%= image_tag pet_post.get_image(500, 500), size: "200x200", class: "rounded" %>
-      <% end %>
-    <div class="card-body">
-      <div class="card-title">
-      <h6>投稿者 :<%= link_to pet_post.customer.name, customer_path(pet_post.customer) %></h6>
-    </div>
-    <div class="card-text">
-      <p>場所 :<%= pet_post.prefecture %><%= pet_post.area %>付近</p>
-      <p>
-      <% tag_list.each do |list|%>
-        <%= link_to "##{list.tag_name}", root_path %>
-      <% end %>
-      </p>
-      <%= link_to pet_post_path(pet_post.id), class: "btn btn-primary" do %>
-        詳細を見る
-      <% end %>
-    </div>
-    <div class="card-footer bg-transparent border-0">
-      <h6>発生日 :<%= pet_post.occurred_on %></h6>
+    <div class="card width: 18rem;">
+        <%= link_to pet_post_path(pet_post.id) do %>
+          <%= image_tag pet_post.get_image(500, 500), size: "200x200", class: "rounded" %>
+        <% end %>
+      <div class="card-body">
+        <div class="card-title">
+        <h6>投稿者 :<%= link_to pet_post.customer.name, customer_path(pet_post.customer) %></h6>
+      </div>
+      <div class="card-text">
+        <p>場所 :<%= pet_post.prefecture %><%= pet_post.area %>付近</p>
+        <p>
+        <% tag_list.each do |list|%>
+          <%= link_to list.tag_name, root_path %>
+        <% end %>
+        </p>
+        <%= link_to pet_post_path(pet_post.id), class: "btn btn-primary" do %>
+          詳細を見る
+        <% end %>
+      </div>
+      <div class="card-footer bg-transparent border-0">
+        <h6>発生日 :<%= pet_post.occurred_on %></h6>
+      </div>
     </div>
   </div>
-</div>
