--- a/app/views/public/customer_pets/_info.html.erb
+++ b/app/views/public/customer_pets/_info.html.erb
@@ -8,7 +8,7 @@
     </tr>
     <tr>
       <td class="bg-light">ペットの種類</td>
-      <td><%= pet.species %></td>
+      <td><%= pet.species_i18n %></td>
     </tr>
     <tr>
       <td class="bg-light">ペットの名前</td>
@@ -16,7 +16,7 @@
     </tr>
     <tr>
       <td class="bg-light">性別</td>
-      <td><%= pet.gender %></td>
+      <td><%= pet.gender_i18n %></td>
     </tr>
     <tr>
       <td class="bg-light">年齢</td>
@@ -24,7 +24,7 @@
     </tr>
     <tr>
       <td class="bg-light">体重</td>
-      <td><%= pet.weight %></td>
+      <td><%= pet.weight_i18n %></td>
     </tr>
     <tr>
       <td class="bg-light">特徴</td>
