--- a/app/views/public/pet_posts/show.html.erb
+++ b/app/views/public/pet_posts/show.html.erb
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class="my-3 mx-auto">
+    <h4>詳細ページ</h4>
+  </div>
   <div class="row">
       <%= render 'detail', customer: @customer, pet_post: @pet_post, pet_post_tags: @pet_post_tags %>
   </div>
