--- a/app/views/public/pet_posts/show.html.erb
+++ b/app/views/public/pet_posts/show.html.erb
@@ -3,6 +3,6 @@
     <h4>詳細ページ</h4>
   </div>
   <div class="row">
-      <%= render 'detail', customer: @customer, pet_post: @pet_post, pet_post_tags: @pet_post_tags %>
+      <%= render 'detail', customer: @customer, pet_post: @pet_post, pet_post_tags: @pet_post_tags, comment: @comment %>
   </div>
 </div>
