--- a/app/views/public/groups/index.html.erb
+++ b/app/views/public/groups/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Public::Groups#index</h1>
-<p>Find me in app/views/public/groups/index.html.erb</p>
+<div class='container px-5 px-sm-0'>
+  <%= flash[:notice] %>
+  <div class='row'>
+    <div class="col-md-8">
+      <h2>グループ一覧</h2>
+    </div>
+    <div class="col-md-4">
+      <%= link_to "グループを作成する", new_group_path, class: "btn btn-info float-right" %>
+    </div>
+      <%= render 'index', groups: @groups %>
+    </div>
+  </div>
+</div>
