--- a/app/views/public/groups/_form.html.erb
+++ b/app/views/public/groups/_form.html.erb
@@ -1,6 +1,6 @@
 
   <div class="form-group">
-    <%= f.label :グループ名 %>
+    <%= f.label :エリア名 %>
     <%= f.text_field :name, class: 'form-control' %>
   </div>
 
