--- a/app/views/public/groups/_index.html.erb
+++ b/app/views/public/groups/_index.html.erb
@@ -3,6 +3,7 @@
     <tr>
       <th></th>
       <th>エリア名</th>
+      <th>メンバー数</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,6 +14,7 @@
           <%= image_tag group.get_group_image(500, 500), size: "50x50", class: "rounded" %>
         </td>
         <td><%= group.name %></td>
+        <td><%= group.group_members.count %></td>
         <td><%= link_to '詳細を見る', group_path(group), class: "group_#{group.id} btn btn-sm btn-success" %></td>
       </tr>
     <% end %>
