--- a/app/views/public/groups/edit.html.erb
+++ b/app/views/public/groups/edit.html.erb
@@ -1,7 +1,7 @@
 <div class='container'>
   <div class='row'>
     <div class="col-sm-12 col-md-8 px-sm-0 mx-auto">
-      <h3>Editing Group</h3>
+      <h3>グループ編集</h3>
       <%= form_with model: @group, url: group_path, method: :patch, local: true do |f| %>
         <%= render 'form', f: f %>
       <% end %>
