--- a/app/views/public/groups/new.html.erb
+++ b/app/views/public/groups/new.html.erb
@@ -1,7 +1,7 @@
 <div class='container'>
   <div class='row'>
     <div class="col-sm-12 col-md-8 px-sm-0 mx-auto">
-      <h3>Create Group</h3>
+      <h3>グループ作成</h3>
       <%= form_with model: @group, url: groups_path, method: :post, local: true do |f| %>
         <%= render 'form', f: f %>
       <% end %>
