--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="d-flex align-items-center">
-      <h4 class="my-2">迷子情報一覧</h4>
+      <h4>迷子情報一覧</h4>
       <div class="ml-3">
         <% if customer_signed_in? %>
           <%= link_to "迷子・保護情報を登録", new_pet_post_path, class:"btn btn-outline-danger mb-2" %>
