--- a/app/views/public/pet_posts/_list.html.erb
+++ b/app/views/public/pet_posts/_list.html.erb
@@ -1,4 +1,5 @@
-<div class="card">
+<div class="col-md-3">
+<div class="card" style:"width: 18rem;">
   <%= link_to pet_post_path(pet_post.id) do %>
     <%= image_tag pet_post.get_image(500, 500), size: "200x200", class: "rounded card-img-top" %>
   <% end %>
@@ -17,7 +18,6 @@
           <%= pet_post.sightings.count %> 件の目撃
       <% end %>
       <p><%= link_to "#{pet_post.comments.count} 件のコメント", pet_post_path(pet_post.id) %></p>
-      <h6>投稿者 :  <%= link_to pet_post.customer.name, customer_path(pet_post.customer) %></h6>
     <% end %>
       <p>場所 :  <b><%= pet_post.prefecture %><%= pet_post.area %>付近</b></p>
       <p><% pet_post.tags.each do |tag|%>
@@ -32,4 +32,5 @@
       <h6>発生日 :<%= pet_post.occurred_on %></h6>
     </div>
   </div>
+</div>
 </div>
