--- a/app/views/layouts/_search_form.html.erb
+++ b/app/views/layouts/_search_form.html.erb
@@ -1,4 +1,6 @@
-<form class="d-flex">
-  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-  <button class="btn btn-light" type="submit">Search</button>
-</form>
+<%= form_with url: keyword_search_searches_path, local: true, method: :get do |f| %>
+  <%= f.text_field :keyword, class: "form-control", placeholder: "エリアを入力してください" %>
+  <%= f.hidden_field :model, value: "pet_post" %>
+  <%= f.hidden_field :method, value: "partial" %>
+  <button type="submit" class="btn btn btn-light">検索</button>
+<% end %>
