--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,12 @@
       <%= render 'layouts/header' %>
     </header>
     <main>
+    <% if flash[:alert] %>
+      <div class="alert alert-danger">
+      <%= flash[:alert] %>
+      </div>
+    <% end %>
+
     <%= flash[:notice] %>
     <%= yield %>
     </main>
